# bub-weixin-channel

./: .env.example  .env.swp  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  run-host.sh
docs/: DOCKER_USAGE.md
docs/superpowers/plans/: 2026-04-23-user-profiles.md  2026-04-29-user-profile-logic-refinement.md
docs/superpowers/specs/: 2026-04-23-user-profiles-design.md  2026-04-29-user-profile-logic-refinement-design.md
src/bub_im_bridge/: __init__.py  __main__.py  profiles.py  queue.py  tool_stats.py
src/bub_im_bridge/feishu/: __init__.py  api.py  channel.py  feishu_prompts.py  plugin.py  tools.py
src/bub_im_bridge/weixin/: __init__.py  agent_adapter.py  channel.py  plugin.py
src/bub_weixin_channel/: __init__.py  __main__.py  agent_adapter.py  channel.py  plugin.py
src/bub_weixin_channel/feishu/: __init__.py  plugin.py
src/skills/feishu-card/: SKILL.md
src/skills/feishu-card/references/: chart-decision-tree.md  components.md  vchart-style-guide.md
tests/: test_api.py  test_feishu_actor_context.py  test_profiles.py  test_queue.py
